traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:1: error: Missing closing brace `}' assumed here
override def run() {var count:Int=0; for (i<-0 to 6) {for (j<-0 to diag) {setPos((diag-j), j); writeMessage(count); count=count+1}; diag=diag+1}; 
^TraversalDiagonal:1: error: expected start of definition
override def run() {var count:Int=0; for (i<-0 to 6) {for (j<-0 to diag) {setPos((diag-j), j); writeMessage(count); count=count+1}; diag=diag+1}; 
         ^